# pages/api/v1/products/random.ts
@@ -1,46 +1,42 @@
+import { Product } from "@prisma/client";
 import { ApiError, apiWrapper } from "~/lib/errors";
 import { options } from "~/lib/options";
 import { getId } from "~/lib/schema";
 import { db } from "~/prisma";
+import { productBodySchema, updateProductBodySchema } from "~/schema.mjs";
+
+const ALLOWED_HEADERS = ["OPTIONS", "GET", "POST", "PUT", "PATCH", "DELETE"];
 
 /**
  * @swagger
- * /api/v1/products/{productId}/store:
+ * /api/v1/products/random:
  *   get:
  *     tags:
  *      - Product
- *     description: Store of a product
- *     parameters:
- *       - $ref: '#/components/schemas/IdParams'
+ *     description: Get a random product
  *     responses:
  *       200:
  *         content:
  *           application/json:
  *             schema:
- *               $ref: '#/components/schemas/StoreResponse'
+ *               $ref: '#/components/schemas/ProductResponse'
  *       404:
- *         description: Product not found
+ *         description: No products found
  *         content:
  *           application/json:
  *             schema:
  *               $ref: '#/components/schemas/Error'
  */
 const handler = apiWrapper(async (req, res) => {
-  if (!options(req, res)) {
+  if (!options(req, res, ["GET"])) {
     return;
   }
 
-  const id = getId(req);
-  const product = await db.product.findUnique({
-    where: { id },
-    include: { store: true },
+  res.json({
+    type: "object",
+    resourceType: "Product",
+    resource: (await db.$queryRaw<Product[]>`SELECT * FROM "Product" ORDER BY RANDOM() LIMIT 1`)[0],
   });
-
-  if (!product) {
-    throw new ApiError(404, "Product not found");
-  }
-
-  res.json({ type: "object", resourceType: "Store", resource: product.store });
 });
 
 export default handler;
