# public/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Next Swagger API Example",
+    "title": "Products API",
     "version": "1.0"
   },
   "components": {
@@ -32,6 +32,146 @@
         "schema": {
           "type": "integer",
           "format": "int64"
+        }
+      },
+      "ProductResponse": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string"
+          },
+          "resourceType": {
+            "type": "string"
+          },
+          "resource": {
+            "$schema": "http://json-schema.org/draft-07/schema#",
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer"
+              },
+              "name": {
+                "type": "string"
+              },
+              "description": {
+                "type": "string"
+              },
+              "image": {
+                "type": "string"
+              },
+              "address": {
+                "type": "string"
+              },
+              "owner": {
+                "type": "string"
+              },
+              "phoneNumber": {
+                "type": "string"
+              },
+              "opensAt": {
+                "type": "integer"
+              },
+              "closesAt": {
+                "type": "integer"
+              },
+              "rating": {
+                "type": "number"
+              },
+              "createdAt": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "updatedAt": {
+                "type": "string",
+                "format": "date-time"
+              }
+            },
+            "required": [
+              "id",
+              "name",
+              "description",
+              "image",
+              "address",
+              "owner",
+              "phoneNumber",
+              "opensAt",
+              "closesAt",
+              "rating",
+              "createdAt",
+              "updatedAt"
+            ],
+            "additionalProperties": false
+          }
+        }
+      },
+      "StoreResponse": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string"
+          },
+          "resourceType": {
+            "type": "string"
+          },
+          "resource": {
+            "$schema": "http://json-schema.org/draft-07/schema#",
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer"
+              },
+              "name": {
+                "type": "string"
+              },
+              "description": {
+                "type": "string"
+              },
+              "image": {
+                "type": "string"
+              },
+              "address": {
+                "type": "string"
+              },
+              "owner": {
+                "type": "string"
+              },
+              "phoneNumber": {
+                "type": "string"
+              },
+              "opensAt": {
+                "type": "integer"
+              },
+              "closesAt": {
+                "type": "integer"
+              },
+              "rating": {
+                "type": "number"
+              },
+              "createdAt": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "updatedAt": {
+                "type": "string",
+                "format": "date-time"
+              }
+            },
+            "required": [
+              "id",
+              "name",
+              "description",
+              "image",
+              "address",
+              "owner",
+              "phoneNumber",
+              "opensAt",
+              "closesAt",
+              "rating",
+              "createdAt",
+              "updatedAt"
+            ],
+            "additionalProperties": false
+          }
         }
       },
       "Product": {
@@ -424,7 +564,13 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "images": {
+                    "type": {
+                      "type": "string"
+                    },
+                    "resourceType": {
+                      "type": "string"
+                    },
+                    "resources": {
                       "type": "array",
                       "items": {
                         "type": "string"
@@ -469,12 +615,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "product": {
-                      "$ref": "#/components/schemas/Product"
-                    }
-                  }
+                  "$ref": "#/components/schemas/ProductResponse"
                 }
               }
             }
@@ -666,12 +807,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "store": {
-                      "$ref": "#/components/schemas/Store"
-                    }
-                  }
+                  "$ref": "#/components/schemas/StoreResponse"
                 }
               }
             }
@@ -681,12 +817,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "store": {
-                      "$ref": "#/components/schemas/Error"
-                    }
-                  }
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
@@ -708,7 +839,13 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "products": {
+                    "type": {
+                      "type": "string"
+                    },
+                    "resourceType": {
+                      "type": "string"
+                    },
+                    "resources": {
                       "type": "array",
                       "items": {
                         "$ref": "#/components/schemas/Product"
@@ -748,6 +885,35 @@
           },
           "400": {
             "description": "Wrong product body",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/products/random": {
+      "get": {
+        "tags": [
+          "Product"
+        ],
+        "description": "Get a random product",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No products found",
             "content": {
               "application/json": {
                 "schema": {
